--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -1,10 +1,14 @@
 {
+  "item.dark_infection.quartz_enriched_netherite_armor_boots": "Quartz Enriched Netherite Boots",
   "effect.dark_infection.darkcorupt": "dont die",
+  "block.dark_infection.voidstone": "Voidstone",
+  "item.dark_infection.quartz_enriched_netherite_armor_chestplate": "Quartz Enriched Netherite Chestplate",
+  "block.dark_infection.darkdirt": "Darkdirt",
+  "block.dark_infection.gravityvoid": "Gravityvoid",
+  "item.dark_infection.quartz_enriched_netherite_armor_helmet": "Quartz Enriched Netherite Helmet",
   "item.dark_infection.itemorbofdarkness": "Ballofdarkness",
   "block.dark_infection.infectedsoil": "Infected soil",
-  "block.dark_infection.voidstone": "Voidstone",
+  "item.dark_infection.quartz_enriched_netherite_armor_leggings": "Quartz Enriched Netherite Leggings",
   "block.dark_infection.void_cobble": "Void Cobble",
-  "block.dark_infection.darkdirt": "Darkdirt",
-  "effect.dark_infection.darkness": "darkness",
-  "block.dark_infection.gravityvoid": "Gravityvoid"
+  "effect.dark_infection.darkness": "darkness"
 }
