--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -1,27 +1,41 @@
 {
   "item.dark_infection.darkarmor_boots": "Dark Boots",
+  "item.dark_infection.pureafyingapp": "Purifying Apple",
   "block.dark_infection.voidstone": "Voidstone",
+  "item.dark_infection.popped_orb_of_darkness": "Popped Orb Of Darkness",
   "effect.dark_infection.ultimate_darkness": "Ultimate Darkness...",
   "item.dark_infection.quartz_enriched_netherite_armor_chestplate": "Quartz Enriched Netherite Chestplate",
+  "item.dark_infection.dark_star": "Dark Star",
+  "item.minecraft.potion.effect.potion_of_ultimate_darkness": "Potion Of Ultimate Darkness",
   "block.dark_infection.darkdirt": "Darkdirt",
   "advancements.the_absolute_dark.descr": "What devotion is this?",
   "biome.dark_infection.dark_biome": "Dark Biome",
   "block.dark_infection.gravityvoid": "Gravityvoid",
+  "item.minecraft.lingering_potion.effect.voidcurepotion": "Lingering Potion of Voidcure",
   "advancements.cover_me_in_quartz.title": "Cover Me In Quartz",
+  "item.dark_infection.enhanced_dark_star": "Enhanced Dark Star",
+  "item.minecraft.tipped_arrow.effect.potion_of_ultimate_darkness": "Arrow of Ultimate Darkness",
   "item.dark_infection.itemorbofdarkness": "Orb Of Darkness",
   "itemGroup.tabdarkinfected": "Dark Infection",
   "effect.dark_infection.darkness": "Darkness",
   "item.dark_infection.dark_carrot": "Dark Carrot",
+  "item.minecraft.potion.effect.voidcurepotion": "Potion of Voidcure",
   "item.dark_infection.quartz_enriched_netherite_armor_boots": "Quartz Enriched Netherite Boots",
+  "item.minecraft.lingering_potion.effect.potion_of_ultimate_darkness": "Lingering Potion Of Ultimate Darkness",
   "effect.dark_infection.darkcorupt": "Don\u0027t Die...",
+  "effect.dark_infection.void_cure": "void cure",
   "item.dark_infection.quartz_enriched_netherite_armor_helmet": "Quartz Enriched Netherite Helmet",
   "item.dark_infection.darkarmor_leggings": "Dark Leggings",
   "item.dark_infection.quartz_enriched_netherite": "Quartz Enriched Netherite Ingot",
   "item.dark_infection.darkarmor_chestplate": "Dark chestplate",
+  "effect.dark_infection.givevoidcure": "one sec",
+  "item.minecraft.tipped_arrow.effect.voidcurepotion": "Arrow of Voidcure",
   "block.dark_infection.infectedsoil": "Infected soil",
   "advancements.cover_me_in_quartz.descr": "Woah! How immune is this...?",
   "item.dark_infection.quartz_enriched_netherite_armor_leggings": "Quartz Enriched Netherite Leggings",
   "block.dark_infection.void_cobble": "Void Cobble",
   "item.dark_infection.darkarmor_helmet": "Dark Helmet",
-  "advancements.the_absolute_dark.title": "The Absolute Dark..."
+  "advancements.the_absolute_dark.title": "The Absolute Dark...",
+  "item.minecraft.splash_potion.effect.voidcurepotion": "Splash Potion of Voidcure",
+  "item.minecraft.splash_potion.effect.potion_of_ultimate_darkness": "Splash PotionOf Ultimate Darkness"
 }
