Alters Void King Boss

--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "entity.dark_infection.voidkingboss": "Voidkingboss",
+  "entity.dark_infection.voidkingboss": "Void King Boss",
   "item.dark_infection.darkarmor_boots": "Dark Boots",
   "item.dark_infection.pureafyingapp": "Purifying Apple",
   "block.dark_infection.voidstone": "Voidstone",
@@ -30,7 +30,7 @@
   "item.minecraft.potion.effect.potion_of_ultimate_darkness": "Potion Of Ultimate Darkness",
   "advancements.the_absolute_dark.descr": "What devotion is this?",
   "item.dark_infection.enhanced_dark_star": "Enhanced Dark Star",
-  "item.dark_infection.voidkingboss_spawn_egg": "Voidkingboss Spawn Egg",
+  "item.dark_infection.voidkingboss_spawn_egg": "Void King Boss Spawn Egg",
   "item.dark_infection.voidking_helmet": "Voidking Helmet",
   "effect.dark_infection.darkness": "Darkness",
   "item.dark_infection.quartz_enriched_netherite_armor_boots": "Quartz Enriched Netherite Boots",
