--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -34,6 +34,7 @@
   "advancements.the_absolute_dark.descr": "What devotion is this?",
   "item.dark_infection.enhanced_dark_star": "Enhanced Dark Star",
   "item.dark_infection.voidkingboss_spawn_egg": "Void King Boss Spawn Egg",
+  "block.dark_infection.chisseldvoidstonebricks": "Chisseldvoidstonebricks",
   "item.dark_infection.voidking_helmet": "Voidking Helmet",
   "effect.dark_infection.darkness": "Darkness",
   "item.dark_infection.quartz_enriched_netherite_armor_boots": "Quartz Enriched Netherite Boots",
