--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -2,13 +2,13 @@
   "entity.dark_infection.voidkingboss": "Void King Boss",
   "item.dark_infection.pureafyingapp": "Purifying Apple",
   "item.dark_infection.darkarmor_boots": "Dark Boots",
-  "block.dark_infection.voidstone": "Voidstone",
+  "block.dark_infection.voidstone": "VoidStone",
   "item.dark_infection.popped_orb_of_darkness": "Popped Orb Of Darkness",
   "effect.dark_infection.ultimate_darkness": "Ultimate Darkness...",
   "item.dark_infection.quartz_enriched_netherite_armor_chestplate": "Quartz Enriched Netherite Chestplate",
-  "block.dark_infection.darkdirt": "Darkdirt",
+  "block.dark_infection.darkdirt": "DarkDirt",
   "biome.dark_infection.dark_biome": "Dark Biome",
-  "block.dark_infection.gravityvoid": "Gravityvoid",
+  "block.dark_infection.gravityvoid": "GravityVoid",
   "item.minecraft.lingering_potion.effect.voidcurepotion": "Lingering Potion of Voidcure",
   "advancements.cover_me_in_quartz.title": "Cover Me In Quartz",
   "item.minecraft.tipped_arrow.effect.potion_of_ultimate_darkness": "Arrow of Ultimate Darkness",
@@ -19,13 +19,13 @@
   "item.minecraft.potion.effect.voidcurepotion": "Potion of Voidcure",
   "item.minecraft.lingering_potion.effect.potion_of_ultimate_darkness": "Lingering Potion Of Ultimate Darkness",
   "advancements.darkling_level_1.descr": "Become a Darkling",
-  "block.dark_infection.voidstonebricks": "Voidstonebricks",
+  "block.dark_infection.voidstonebricks": "VoidStone Bricks",
   "item.dark_infection.darkarmor_leggings": "Dark Leggings",
   "effect.dark_infection.givevoidcure": "one sec",
   "item.dark_infection.curev": "Cure Vial",
   "item.dark_infection.voidkingsword": "Voidkingsword",
   "item.minecraft.tipped_arrow.effect.voidcurepotion": "Arrow of Voidcure",
-  "block.dark_infection.infectedsoil": "Infected soil",
+  "block.dark_infection.infectedsoil": "Infected Soil",
   "advancements.cover_me_in_quartz.descr": "Woah! How immune is this...?",
   "advancements.the_absolute_dark.title": "The Absolute Dark...",
   "item.minecraft.splash_potion.effect.potion_of_ultimate_darkness": "Splash PotionOf Ultimate Darkness",
@@ -34,7 +34,7 @@
   "advancements.the_absolute_dark.descr": "What devotion is this?",
   "item.dark_infection.enhanced_dark_star": "Enhanced Dark Star",
   "item.dark_infection.voidkingboss_spawn_egg": "Void King Boss Spawn Egg",
-  "block.dark_infection.chisseldvoidstonebricks": "Chisseldvoidstonebricks",
+  "block.dark_infection.chisseldvoidstonebricks": "Chiseled VoidStone Bricks",
   "item.dark_infection.voidking_helmet": "Voidking Helmet",
   "effect.dark_infection.darkness": "Darkness",
   "item.dark_infection.quartz_enriched_netherite_armor_boots": "Quartz Enriched Netherite Boots",
