--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -1,7 +1,8 @@
 {
   "entity.dark_infection.voidkingboss": "Void King Boss",
-  "item.dark_infection.darkarmor_boots": "Dark Boots",
+  "block.dark_infection.void_stone_diamond_ore": "Void Stone Diamond Ore",
   "item.dark_infection.pureafyingapp": "Purifying Apple",
+  "item.dark_infection.darkarmor_boots": "Dark Boots",
   "block.dark_infection.voidstone": "VoidStone",
   "item.dark_infection.popped_orb_of_darkness": "Popped Orb Of Darkness",
   "effect.dark_infection.ultimate_darkness": "Ultimate Darkness...",
@@ -12,40 +13,44 @@
   "item.minecraft.lingering_potion.effect.voidcurepotion": "Lingering Potion of Voidcure",
   "advancements.cover_me_in_quartz.title": "Cover Me In Quartz",
   "advancements.darkling_level_2.descr": "Delve further into the Darkness...",
+  "block.dark_infection.void_stone_coal_ore": "Void Stone Coal Ore",
+  "block.dark_infection.void_stone_gold_ore": "Void Stone Gold Ore",
   "item.minecraft.tipped_arrow.effect.potion_of_ultimate_darkness": "Arrow of Ultimate Darkness",
   "item.dark_infection.itemorbofdarkness": "Orb Of Darkness",
-  "advancements.darkling_level_2.title": "Darkling Level 2",
   "item.dark_infection.voidking_leggings": "Voidking Leggings",
   "itemGroup.tabdarkinfected": "Dark Infection",
   "item.dark_infection.dark_carrot": "Dark Carrot",
   "item.minecraft.potion.effect.voidcurepotion": "Potion of Voidcure",
   "item.minecraft.lingering_potion.effect.potion_of_ultimate_darkness": "Lingering Potion Of Ultimate Darkness",
+  "biome.dark_infection.dark_caves": "Dark Caves",
   "advancements.darkling_level_1.descr": "Become a Darkling",
   "block.dark_infection.voidstonebricks": "VoidStone Bricks",
+  "block.dark_infection.void_stone_copper_ore": "Void Stone Copper Ore",
   "item.dark_infection.darkarmor_leggings": "Dark Leggings",
   "effect.dark_infection.givevoidcure": "one sec",
   "item.dark_infection.curev": "Cure Vial",
-  "item.dark_infection.voidkingsword": "Void King\u0027s Lance",
+  "item.dark_infection.voidkingsword": "Voidkingsword",
   "item.minecraft.tipped_arrow.effect.voidcurepotion": "Arrow of Voidcure",
   "block.dark_infection.infectedsoil": "Infected Soil",
   "advancements.cover_me_in_quartz.descr": "Woah! How immune is this...?",
   "advancements.the_absolute_dark.title": "The Absolute Dark...",
-  "item.dark_infection.iron_rod": "Iron Rod",
+  "block.dark_infection.void_stone_emerald_ore": "Void Stone Emerald Ore",
   "item.minecraft.splash_potion.effect.potion_of_ultimate_darkness": "Splash PotionOf Ultimate Darkness",
+  "block.dark_infection.void_stone_iron_ore": "Void Stone Iron Ore",
   "item.dark_infection.dark_star": "Dark Star",
   "item.minecraft.potion.effect.potion_of_ultimate_darkness": "Potion Of Ultimate Darkness",
   "advancements.the_absolute_dark.descr": "What devotion is this?",
   "item.dark_infection.enhanced_dark_star": "Enhanced Dark Star",
   "item.dark_infection.voidkingboss_spawn_egg": "Void King Boss Spawn Egg",
+  "block.dark_infection.void_stone_lapis_ore": "Void Stone Lapis Ore",
   "block.dark_infection.chisseldvoidstonebricks": "Chiseled VoidStone Bricks",
   "item.dark_infection.voidking_helmet": "Voidking Helmet",
   "effect.dark_infection.darkness": "Darkness",
   "item.dark_infection.quartz_enriched_netherite_armor_boots": "Quartz Enriched Netherite Boots",
   "effect.dark_infection.darkcorupt": "Don\u0027t Die...",
+  "block.dark_infection.void_stone_redstone_ore": "Void Stone Redstone Ore",
   "effect.dark_infection.void_cure": "void cure",
-  "item.dark_infection.blue_pole": "Blue Pole",
   "item.dark_infection.voidvile": "Void Vial",
-  "item.dark_infection.iron_pole": "Iron Pole",
   "item.dark_infection.strangev": "Strange Vial",
   "item.dark_infection.quartz_enriched_netherite_armor_helmet": "Quartz Enriched Netherite Helmet",
   "item.dark_infection.quartz_enriched_netherite": "Quartz Enriched Netherite Ingot",
