Fixes Dark Caves biome, as well as adds Deepslate Ores to the infection list and changes how the mod displays in the Mod List in-game!

--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -34,6 +34,7 @@
   "block.dark_infection.infectedsoil": "Infected Soil",
   "advancements.cover_me_in_quartz.descr": "Woah! How immune is this...?",
   "advancements.the_absolute_dark.title": "The Absolute Dark...",
+  "item.dark_infection.iron_rod": "Iron Rod",
   "block.dark_infection.void_stone_emerald_ore": "Void Stone Emerald Ore",
   "item.minecraft.splash_potion.effect.potion_of_ultimate_darkness": "Splash PotionOf Ultimate Darkness",
   "block.dark_infection.void_stone_iron_ore": "Void Stone Iron Ore",
@@ -50,7 +51,9 @@
   "effect.dark_infection.darkcorupt": "Don\u0027t Die...",
   "block.dark_infection.void_stone_redstone_ore": "Void Stone Redstone Ore",
   "effect.dark_infection.void_cure": "void cure",
+  "item.dark_infection.blue_pole": "Blue Pole",
   "item.dark_infection.voidvile": "Void Vial",
+  "item.dark_infection.iron_pole": "Iron Pole",
   "item.dark_infection.strangev": "Strange Vial",
   "item.dark_infection.quartz_enriched_netherite_armor_helmet": "Quartz Enriched Netherite Helmet",
   "item.dark_infection.quartz_enriched_netherite": "Quartz Enriched Netherite Ingot",
