MCreator Merge commit 'dd7efea37ec76a865abb1b50b78080a7bf1cfed5' into b11a3ac3b4188406d24676ffb26a897199b60f7f

--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -30,7 +30,7 @@
   "effect.dark_infection.givevoidcure": "one sec",
   "item.dark_infection.curev": "Cure Vial",
   "item.dark_infection.voidkingsword": "Voidkingsword",
-  "item.minecraft.tipped_arrow.effect.voidcurepotion": "Arrow of Voidcure (dont use its broken)",
+  "item.minecraft.tipped_arrow.effect.voidcurepotion": "Arrow of Voidcure",
   "block.dark_infection.infectedsoil": "Infected Soil",
   "advancements.cover_me_in_quartz.descr": "Woah! How immune is this...?",
   "advancements.the_absolute_dark.title": "The Absolute Dark...",
@@ -46,14 +46,12 @@
   "block.dark_infection.void_stone_lapis_ore": "Void Stone Lapis Ore",
   "block.dark_infection.chisseldvoidstonebricks": "Chiseled VoidStone Bricks",
   "item.dark_infection.voidking_helmet": "Voidking Helmet",
-  "gamerule.doInfectionSpread": "doInfectionSpread",
   "effect.dark_infection.darkness": "Darkness",
   "item.dark_infection.quartz_enriched_netherite_armor_boots": "Quartz Enriched Netherite Boots",
   "effect.dark_infection.darkcorupt": "Don\u0027t Die...",
   "block.dark_infection.void_stone_redstone_ore": "Void Stone Redstone Ore",
   "effect.dark_infection.void_cure": "void cure",
   "item.dark_infection.blue_pole": "Blue Pole",
-  "gamerule.doInfectionSpread.description": "toggles infection spread",
   "item.dark_infection.voidvile": "Void Vial",
   "item.dark_infection.iron_pole": "Iron Pole",
   "item.dark_infection.strangev": "Strange Vial",
@@ -65,7 +63,7 @@
   "item.dark_infection.voidking_chestplate": "Voidking Body",
   "block.dark_infection.void_cobble": "Void Cobble",
   "item.dark_infection.darkarmor_helmet": "Dark Helmet",
-  "item.minecraft.splash_potion.effect.voidcurepotion": "Splash Potion of Voidcure (dont use its broken)",
+  "item.minecraft.splash_potion.effect.voidcurepotion": "Splash Potion of Voidcure",
   "item.dark_infection.voidking_boots": "Voidking Boots",
   "item.dark_infection.emptyvile": "Empty Vial"
 }
