Adds Villager Trade for Orb of Infection Adds New Advancements for Darklings Adds Improved Recipes Fixes Ores Duping

--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -12,13 +12,16 @@
   "block.dark_infection.gravityvoid": "GravityVoid",
   "item.minecraft.lingering_potion.effect.voidcurepotion": "Lingering Potion of Voidcure",
   "advancements.cover_me_in_quartz.title": "Cover Me In Quartz",
-  "advancements.darkling_level_2.descr": "Delve further into the Darkness...",
+  "advancements.darkling_level_2.descr": "Delve Further into the Darkness",
   "block.dark_infection.void_stone_coal_ore": "Void Stone Coal Ore",
   "block.dark_infection.void_stone_gold_ore": "Void Stone Gold Ore",
   "item.minecraft.tipped_arrow.effect.potion_of_ultimate_darkness": "Arrow of Ultimate Darkness",
   "item.dark_infection.itemorbofdarkness": "Orb Of Darkness",
+  "advancements.darkling_level_2.title": "Darkling Level 2",
   "item.dark_infection.voidking_leggings": "Voidking Leggings",
   "itemGroup.tabdarkinfected": "Dark Infection",
+  "advancements.the_dark_armor.title": "Cover Me in Darkness",
+  "advancements.the_dark_armor.descr": "Surround yourself in the void... and it will bless you.",
   "item.dark_infection.dark_carrot": "Dark Carrot",
   "item.minecraft.potion.effect.voidcurepotion": "Potion of Voidcure",
   "item.minecraft.lingering_potion.effect.potion_of_ultimate_darkness": "Lingering Potion Of Ultimate Darkness",
@@ -26,11 +29,12 @@
   "advancements.darkling_level_1.descr": "Become a Darkling",
   "block.dark_infection.voidstonebricks": "VoidStone Bricks",
   "block.dark_infection.void_stone_copper_ore": "Void Stone Copper Ore",
+  "advancements.the_dark_infection.title": "The Dark Infection",
   "item.dark_infection.darkarmor_leggings": "Dark Leggings",
   "effect.dark_infection.givevoidcure": "one sec",
   "item.dark_infection.curev": "Cure Vial",
   "item.dark_infection.voidkingsword": "Voidkingsword",
-  "item.minecraft.tipped_arrow.effect.voidcurepotion": "Arrow of Voidcure",
+  "item.minecraft.tipped_arrow.effect.voidcurepotion": "Arrow of Voidcure (dont use its broken)",
   "block.dark_infection.infectedsoil": "Infected Soil",
   "advancements.cover_me_in_quartz.descr": "Woah! How immune is this...?",
   "advancements.the_absolute_dark.title": "The Absolute Dark...",
@@ -45,13 +49,16 @@
   "item.dark_infection.voidkingboss_spawn_egg": "Void King Boss Spawn Egg",
   "block.dark_infection.void_stone_lapis_ore": "Void Stone Lapis Ore",
   "block.dark_infection.chisseldvoidstonebricks": "Chiseled VoidStone Bricks",
+  "advancements.the_dark_infection.descr": "The darkness within us all grows...",
   "item.dark_infection.voidking_helmet": "Voidking Helmet",
+  "gamerule.doInfectionSpread": "doInfectionSpread",
   "effect.dark_infection.darkness": "Darkness",
   "item.dark_infection.quartz_enriched_netherite_armor_boots": "Quartz Enriched Netherite Boots",
   "effect.dark_infection.darkcorupt": "Don\u0027t Die...",
   "block.dark_infection.void_stone_redstone_ore": "Void Stone Redstone Ore",
   "effect.dark_infection.void_cure": "void cure",
   "item.dark_infection.blue_pole": "Blue Pole",
+  "gamerule.doInfectionSpread.description": "toggles infection spread",
   "item.dark_infection.voidvile": "Void Vial",
   "item.dark_infection.iron_pole": "Iron Pole",
   "item.dark_infection.strangev": "Strange Vial",
@@ -63,7 +70,7 @@
   "item.dark_infection.voidking_chestplate": "Voidking Body",
   "block.dark_infection.void_cobble": "Void Cobble",
   "item.dark_infection.darkarmor_helmet": "Dark Helmet",
-  "item.minecraft.splash_potion.effect.voidcurepotion": "Splash Potion of Voidcure",
+  "item.minecraft.splash_potion.effect.voidcurepotion": "Splash Potion of Voidcure (dont use its broken)",
   "item.dark_infection.voidking_boots": "Voidking Boots",
   "item.dark_infection.emptyvile": "Empty Vial"
 }
