Adds Dark Ingot, Dark Tools, and fixes the Dark Caves!

--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -37,10 +37,12 @@
   "item.dark_infection.darkarmor_leggings": "Dark Leggings",
   "effect.dark_infection.givevoidcure": "one sec",
   "item.dark_infection.curev": "Cure Vial",
+  "item.dark_infection.dark_sword": "Dark Sword",
   "item.dark_infection.voidkingsword": "Voidkingsword",
   "item.minecraft.tipped_arrow.effect.voidcurepotion": "Arrow of Voidcure (dont use its broken)",
   "block.dark_infection.infectedsoil": "Infected Soil",
   "advancements.cover_me_in_quartz.descr": "Woah! How immune is this...?",
+  "item.dark_infection.dark_pickaxe": "Dark Pickaxe",
   "advancements.the_absolute_dark.title": "The Absolute Dark...",
   "item.dark_infection.iron_rod": "Iron Rod",
   "block.dark_infection.void_stone_brick_slabs": "Void Stone Brick Slab",
@@ -61,6 +63,7 @@
   "advancements.the_dark_infection.descr": "The darkness within us all grows...",
   "item.dark_infection.voidking_helmet": "Voidking Helmet",
   "gamerule.doInfectionSpread": "doInfectionSpread",
+  "item.dark_infection.dark_hoe": "Dark Hoe",
   "effect.dark_infection.darkness": "Darkness",
   "item.dark_infection.quartz_enriched_netherite_armor_boots": "Quartz Enriched Netherite Boots",
   "effect.dark_infection.darkcorupt": "Don\u0027t Die...",
@@ -69,8 +72,10 @@
   "item.dark_infection.blue_pole": "Blue Pole",
   "gamerule.doInfectionSpread.description": "toggles infection spread",
   "block.dark_infection.void_king_spawner": "Void King Spawner",
+  "item.dark_infection.dark_shovel": "Dark Shovel",
   "item.dark_infection.voidvile": "Void Vial",
   "item.dark_infection.iron_pole": "Iron Pole",
+  "item.dark_infection.dark_axe": "Dark Axe",
   "item.dark_infection.strangev": "Strange Vial",
   "item.dark_infection.quartz_enriched_netherite_armor_helmet": "Quartz Enriched Netherite Helmet",
   "item.dark_infection.quartz_enriched_netherite": "Quartz Enriched Netherite Ingot",
@@ -81,6 +86,7 @@
   "item.dark_infection.voidking_chestplate": "Voidking Body",
   "block.dark_infection.void_cobble": "Void Cobble",
   "item.dark_infection.darkarmor_helmet": "Dark Helmet",
+  "item.dark_infection.dark_ingot": "Dark Ingot",
   "item.minecraft.splash_potion.effect.voidcurepotion": "Splash Potion of Voidcure (dont use its broken)",
   "item.dark_infection.voidking_boots": "Voidking Boots",
   "item.dark_infection.emptyvile": "Empty Vial"
