Adds BoatGod abilities (Only for BoatGod69) and fixes ores and the Emerald ore generation

--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -16,6 +16,7 @@
   "block.dark_infection.void_stone_copper_ore": "Void Stone Copper Ore",
   "advancements.the_dark_infection.title": "The Dark Infection",
   "item.dark_infection.darkarmor_leggings": "Dark Leggings",
+  "key.dark_infection.summon_boats_boat_god": "Summon Boats (BoatGod Only)",
   "item.dark_infection.curev": "Cure Vial",
   "item.dark_infection.dark_sword": "Dark Sword",
   "item.dark_infection.dark_pickaxe": "Dark Pickaxe",
@@ -68,6 +69,7 @@
   "advancements.the_dark_armor.descr": "Surround yourself in the void... and it will bless you.",
   "block.dark_infection.void_stone_brick_walls": "Void Stone Brick Walls",
   "item.minecraft.lingering_potion.effect.potion_of_ultimate_darkness": "Lingering Potion Of Ultimate Darkness",
+  "key.dark_infection.flight_boat_god": "Flight (BoatGod Only)",
   "biome.dark_infection.dark_caves": "Dark Caves",
   "advancements.the_void_advancement.title": "The Void",
   "advancements.darkling_level_1.descr": "Become a Darkling",
