BoatGod fly foxes (I hope)

--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -11,7 +11,7 @@
   "item.dark_infection.quartz_axe": "Q.E.N. Axe",
   "advancements.the_dark_armor.title": "Cover Me in Darkness",
   "item.dark_infection.dark_carrot": "Dark Carrot",
-  "item.minecraft.potion.effect.voidcurepotion": "Potion of Voidcure",
+  "item.minecraft.potion.effect.voidcurepotion": "Potion of VoidCure",
   "advancements.the_void_king.title": "The Void King",
   "block.dark_infection.void_stone_copper_ore": "Void Stone Copper Ore",
   "advancements.the_dark_infection.title": "The Dark Infection",
@@ -24,23 +24,24 @@
   "item.dark_infection.iron_rod": "Iron Rod",
   "block.dark_infection.void_stone_brick_slabs": "Void Stone Brick Slab",
   "block.dark_infection.void_stone_emerald_ore": "Void Stone Emerald Ore",
-  "item.minecraft.splash_potion.effect.potion_of_ultimate_darkness": "Splash PotionOf Ultimate Darkness",
+  "item.minecraft.splash_potion.effect.potion_of_ultimate_darkness": "Splash Potion Of Ultimate Darkness",
   "block.dark_infection.void_stone_brick_stairs": "Void Stone Brick Stairs",
+  "death.attack.gone": "%1$s broke free of the Void King\u0027s control thanks to %2$s",
   "item.minecraft.potion.effect.potion_of_ultimate_darkness": "Potion Of Ultimate Darkness",
   "advancements.the_absolute_dark.descr": "What devotion is this?",
   "item.dark_infection.enhanced_dark_star": "Enhanced Dark Star",
   "block.dark_infection.void_stone_lapis_ore": "Void Stone Lapis Ore",
   "advancements.darkling_level_3.descr": "Envelop yourself in the darkness...",
-  "item.dark_infection.voidking_helmet": "Voidking Helmet",
+  "item.dark_infection.voidking_helmet": "Void King Helmet",
   "gamerule.doInfectionSpread": "Do Infection Spread",
   "item.dark_infection.dark_hoe": "Dark Hoe",
   "effect.dark_infection.darkness": "Darkness",
   "item.dark_infection.quartz_enriched_netherite_armor_boots": "Quartz Enriched Netherite Boots",
-  "effect.dark_infection.void_cure": "void cure",
-  "item.dark_infection.blue_pole": "Blue Pole",
+  "effect.dark_infection.void_cure": "Void Cure",
   "gamerule.doInfectionSpread.description": "Toggles Infection Spreading",
-  "item.dark_infection.dark_axe": "Dark Axe",
+  "item.dark_infection.blue_pole": "Blue Pole",
   "item.dark_infection.voidvile": "Void Vial",
+  "item.dark_infection.dark_axe": "Dark Axe",
   "item.dark_infection.quartz_enriched_netherite_armor_helmet": "Quartz Enriched Netherite Helmet",
   "item.dark_infection.quartz_enriched_netherite": "Quartz Enriched Netherite Ingot",
   "item.dark_infection.darkarmor_chestplate": "Dark Chestplate",
@@ -48,7 +49,7 @@
   "advancements.the_void_advancement.descr": "Enter the Darkness.",
   "item.dark_infection.dark_ingot": "Dark Ingot",
   "item.minecraft.splash_potion.effect.voidcurepotion": "Splash Potion of Voidcure (dont use its broken)",
-  "item.dark_infection.voidking_boots": "Voidking Boots",
+  "item.dark_infection.voidking_boots": "Void King Boots",
   "item.dark_infection.emptyvile": "Empty Vial",
   "entity.dark_infection.voidkingboss": "Void King Boss",
   "block.dark_infection.void_stone_diamond_ore": "Void Stone Diamond Ore",
@@ -58,13 +59,13 @@
   "item.dark_infection.popped_orb_of_darkness": "Popped Orb Of Darkness",
   "item.dark_infection.quartz_sword": "Q.E.N. Sword",
   "biome.dark_infection.dark_biome": "Dark Biome",
-  "item.minecraft.lingering_potion.effect.voidcurepotion": "Lingering Potion of Voidcure",
+  "item.minecraft.lingering_potion.effect.voidcurepotion": "Lingering Potion of VoidCure",
   "block.dark_infection.void_stone_gold_ore": "Void Stone Gold Ore",
   "item.minecraft.tipped_arrow.effect.potion_of_ultimate_darkness": "Arrow of Ultimate Darkness",
   "block.dark_infection.void_stone_redstone_ore_lit": "Void Stone Redstone Ore Lit",
   "item.dark_infection.itemorbofdarkness": "Orb Of Darkness",
   "advancements.darkling_level_2.title": "Darkling Level 2",
-  "item.dark_infection.voidking_leggings": "Voidking Leggings",
+  "item.dark_infection.voidking_leggings": "Void King Leggings",
   "itemGroup.tabdarkinfected": "Dark Infection",
   "advancements.the_dark_armor.descr": "Surround yourself in the void... and it will bless you.",
   "block.dark_infection.void_stone_brick_walls": "Void Stone Brick Walls",
@@ -74,9 +75,9 @@
   "advancements.the_void_advancement.title": "The Void",
   "advancements.darkling_level_1.descr": "Become a Darkling",
   "block.dark_infection.voidstonebricks": "VoidStone Bricks",
-  "effect.dark_infection.givevoidcure": "one sec",
-  "item.dark_infection.voidkingsword": "Voidkingsword",
-  "item.minecraft.tipped_arrow.effect.voidcurepotion": "Arrow of Voidcure (dont use its broken)",
+  "effect.dark_infection.givevoidcure": "One Second",
+  "item.dark_infection.voidkingsword": "Void King Sword",
+  "item.minecraft.tipped_arrow.effect.voidcurepotion": "Arrow of VoidCure (don\u0027t use, it\u0027s broken)",
   "block.dark_infection.infectedsoil": "Infected Soil",
   "advancements.cover_me_in_quartz.descr": "Woah! How immune is this...?",
   "item.dark_infection.dark_orb": "Dark Orb",
@@ -96,7 +97,7 @@
   "item.dark_infection.strangev": "Strange Vial",
   "item.dark_infection.quartz_shovel": "Q.E.N. Shovel",
   "item.dark_infection.quartz_enriched_netherite_armor_leggings": "Quartz Enriched Netherite Leggings",
-  "item.dark_infection.voidking_chestplate": "Voidking Body",
+  "item.dark_infection.voidking_chestplate": "Void King Chestplate",
   "item.dark_infection.darkarmor_helmet": "Dark Helmet",
   "block.dark_infection.void_cobble": "Void Cobble"
 }
