fixed boatgod flight and added silver yeet

--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -37,10 +37,10 @@
   "effect.dark_infection.darkness": "Darkness",
   "item.dark_infection.quartz_enriched_netherite_armor_boots": "Quartz Enriched Netherite Boots",
   "effect.dark_infection.void_cure": "void cure",
-  "item.dark_infection.blue_pole": "Blue Pole",
   "gamerule.doInfectionSpread.description": "Toggles Infection Spreading",
-  "item.dark_infection.dark_axe": "Dark Axe",
+  "item.dark_infection.blue_pole": "Blue Pole",
   "item.dark_infection.voidvile": "Void Vial",
+  "item.dark_infection.dark_axe": "Dark Axe",
   "item.dark_infection.quartz_enriched_netherite_armor_helmet": "Quartz Enriched Netherite Helmet",
   "item.dark_infection.quartz_enriched_netherite": "Quartz Enriched Netherite Ingot",
   "item.dark_infection.darkarmor_chestplate": "Dark Chestplate",
@@ -52,6 +52,7 @@
   "item.dark_infection.emptyvile": "Empty Vial",
   "entity.dark_infection.voidkingboss": "Void King Boss",
   "block.dark_infection.void_stone_diamond_ore": "Void Stone Diamond Ore",
+  "key.dark_infection.silveryeetbind": "Silveryeetbind",
   "item.dark_infection.pureafyingapp": "Purifying Apple",
   "item.dark_infection.darkarmor_boots": "Dark Boots",
   "block.dark_infection.voidstone": "VoidStone",
