--- a/src/main/resources/assets/dark_infection/lang/en_us.json
+++ b/src/main/resources/assets/dark_infection/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.dark_infection.popped_orb_of_darkness": "Popped Orb Of Darkness",
   "effect.dark_infection.ultimate_darkness": "Ultimate Darkness...",
   "item.dark_infection.quartz_enriched_netherite_armor_chestplate": "Quartz Enriched Netherite Chestplate",
+  "item.dark_infection.quartz_sword": "Q.E.N. Sword",
   "block.dark_infection.darkdirt": "DarkDirt",
   "biome.dark_infection.dark_biome": "Dark Biome",
   "block.dark_infection.gravityvoid": "GravityVoid",
@@ -16,6 +17,7 @@
   "block.dark_infection.void_stone_coal_ore": "Void Stone Coal Ore",
   "block.dark_infection.void_stone_gold_ore": "Void Stone Gold Ore",
   "item.minecraft.tipped_arrow.effect.potion_of_ultimate_darkness": "Arrow of Ultimate Darkness",
+  "block.dark_infection.void_stone_redstone_ore_lit": "Void Stone Redstone Ore Lit",
   "item.dark_infection.itemorbofdarkness": "Orb Of Darkness",
   "item.dark_infection.voidking_leggings": "Voidking Leggings",
   "itemGroup.tabdarkinfected": "Dark Infection",
@@ -29,15 +31,21 @@
   "item.dark_infection.darkarmor_leggings": "Dark Leggings",
   "effect.dark_infection.givevoidcure": "one sec",
   "item.dark_infection.curev": "Cure Vial",
+  "item.dark_infection.dark_sword": "Dark Sword",
   "item.dark_infection.voidkingsword": "Voidkingsword",
   "item.minecraft.tipped_arrow.effect.voidcurepotion": "Arrow of Voidcure (dont use its broken)",
   "block.dark_infection.infectedsoil": "Infected Soil",
   "advancements.cover_me_in_quartz.descr": "Woah! How immune is this...?",
+  "item.dark_infection.dark_pickaxe": "Dark Pickaxe",
+  "item.dark_infection.dark_orb": "Dark Orb",
   "advancements.the_absolute_dark.title": "The Absolute Dark...",
   "item.dark_infection.iron_rod": "Iron Rod",
+  "block.dark_infection.void_stone_brick_slabs": "Void Stone Brick Slab",
   "block.dark_infection.void_stone_emerald_ore": "Void Stone Emerald Ore",
   "item.minecraft.splash_potion.effect.potion_of_ultimate_darkness": "Splash PotionOf Ultimate Darkness",
+  "block.dark_infection.void_stone_brick_stairs": "Void Stone Brick Stairs",
   "block.dark_infection.void_stone_iron_ore": "Void Stone Iron Ore",
+  "item.dark_infection.quartz_hoe": "Q.E.N. Hoe",
   "item.minecraft.potion.effect.potion_of_ultimate_darkness": "Potion Of Ultimate Darkness",
   "item.dark_infection.dark_star": "Dark Star",
   "advancements.the_absolute_dark.descr": "What devotion is this?",
@@ -47,6 +55,7 @@
   "block.dark_infection.chisseldvoidstonebricks": "Chiseled VoidStone Bricks",
   "item.dark_infection.voidking_helmet": "Voidking Helmet",
   "gamerule.doInfectionSpread": "doInfectionSpread",
+  "item.dark_infection.dark_hoe": "Dark Hoe",
   "effect.dark_infection.darkness": "Darkness",
   "item.dark_infection.quartz_enriched_netherite_armor_boots": "Quartz Enriched Netherite Boots",
   "effect.dark_infection.darkcorupt": "Don\u0027t Die...",
@@ -54,6 +63,7 @@
   "effect.dark_infection.void_cure": "void cure",
   "gamerule.doInfectionSpread.description": "toggles infection spread",
   "item.dark_infection.blue_pole": "Blue Pole",
+  "block.dark_infection.void_king_spawner": "Void King Spawner",
   "item.dark_infection.voidvile": "Void Vial",
   "item.dark_infection.iron_pole": "Iron Pole",
   "item.dark_infection.strangev": "Strange Vial",
@@ -61,6 +71,7 @@
   "item.dark_infection.quartz_enriched_netherite": "Quartz Enriched Netherite Ingot",
   "item.dark_infection.darkarmor_chestplate": "Dark Chestplate",
   "advancements.darkling_level_1.title": "Darkling Level 1",
+  "item.dark_infection.quartz_shovel": "Q.E.N. Shovel",
   "item.dark_infection.quartz_enriched_netherite_armor_leggings": "Quartz Enriched Netherite Leggings",
   "item.dark_infection.voidking_chestplate": "Voidking Body",
   "item.dark_infection.darkarmor_helmet": "Dark Helmet",
